refactor: Splitting writer into facade, fixing related tests, adding comments/headers